updating fight logic and layout issues

--- a/sass/module/content.scss
+++ b/sass/module/content.scss
@@ -3,6 +3,7 @@ html {
   background-size: cover;
   height: 100%;
   min-width: 320px;
+  color: #fff;
 }
 
 .con {
@@ -26,22 +27,155 @@ p {
   letter-spacing: 1px;
   font-size: 14px;
   margin: 20px 0 10px;
-  line-height:22px;
+  line-height: 22px;
 }
 
-.overlay {
-  padding-top: 80px;
-  display: none;
+.overlay-bg {
   position: fixed;
-  height: calc(100% - 80px);
+  display: none;
+  height: 100%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.8);
   top: 0;
+}
+
+.overlay {
+  padding-top: 60px;
+  display: none;
+  position: absolute;
+  height: calc(100% - 80px);
+  width: 100%;
+  top: 0;
+  z-index:1;
 }
 
 .intro-state {
   .hub-cards,
   .hub-challenges {
     display: none;
+  }
+}
+// fight
+
+.done {
+  background-color: #333 !important;
+  color: #999;
+}
+
+.villain-wrapper .attrib span:nth-of-type(2) {
+  opacity: 0;
+}
+
+.villain-wrapper .attrib.done span:nth-of-type(2) {
+  opacity: 1;
+}
+
+.fight {
+  .overlay,
+  .overlay-bg {
+    display: block;
+  }
+}
+
+.score{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  background: rgba(255, 0, 0, 0.6);
+  transition: width 1s linear;
+  }
+
+  .fight-wrapper{
+    &.points-1 .score{
+      width:66%;
+    }
+    &.points-2 .score{
+      width:33%;
+    }
+    &.points-3 .score{
+      width:0;
+    }
+  }
+
+  .instructions{
+    text-align: center;
+    margin: 10px;
+    font-size: 10px;
+    text-transform: uppercase;
+  }
+
+.fight-wrapper {
+  width: 70%;
+  max-width: 269px;
+  margin: 0 auto;
+  border: 1px solid #fff;
+  position: relative;
+
+  h2 {
+    display: inline-block;
+    vertical-align: top;
+    font-size: 14px;
+    letter-spacing: 1.5px;
+    background: #000000;
+    width: 100%;
+    height: 26px;
+    left: 0;
+    line-height: 26px;
+    text-indent: 6px;
+    position: absolute;
+    font-weight: 300;
+    top:0;
+    text-transform: uppercase;
+    padding-top:4px;
+  }
+
+  img {
+    width: 100%;
+    display: block;
+    border-bottom: 1px solid #fff;
+  }
+}
+
+.stats-wrapper {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  right: 0;
+  opacity: 0.8;
+}
+
+.hero-wrapper {
+  background: #256f9a;
+}
+
+.villain-wrapper {
+  background: #ccc;
+}
+
+.attrib {
+  display: inline-block;
+  width: calc(50% - 1px);
+  font-size: 12px;
+  height: 32px;
+  line-height: 33px;
+  cursor: pointer;
+  text-align: center;
+  background: #000;
+  text-transform: uppercase;
+  border-top: 1px solid #fff;
+  border-left: 1px solid #fff;
+
+  &.done {
+    cursor: inherit;
+  }
+
+  &.won {
+    color: green;
+  }
+
+  &.lost {
+    color: red;
   }
 }
