--- a/sass/module/hub.scss
+++ b/sass/module/hub.scss
@@ -43,7 +43,8 @@
 //   display:none;
 // }
 
-.selected-pack .overlay{
+.selected-pack .overlay,
+.selected-pack .overlay-bg{
   display:block;
 }
 
